# alts-modules

./: .gitignore  README.md  pyproject.toml
.github/: unit_tests.yml
.github/workflows/: automated_testing.yml  unit_tests.yml
alts/modules/: behavior.py  blueprint.py  data_sampler.py  evaluator.py  queried_data_pool.py  stopping_criteria.py
alts/modules/data_process/: observable_filter.py  process.py  time_behavior.py  time_source.py
alts/modules/oracle/: augmentation.py  data_source.py  query_queue.py
alts/modules/query/: query_decider.py  query_optimizer.py  query_sampler.py  selection_criteria.py
tests/: test_alts.py
tests/new_api/building_blocks/: test_data_pool.py  test_data_sampler.py
tests/oracle/: data_source.py
tests/unit_test/data_process_test/: time_source_test.py
tests/unit_test/oracle_test/: augmentation_test.py  data_source_data.py  data_source_test.py
tests/unit_test/query_test/: query_decider_data.py  query_decider_test.py  selection_criteria_test.py
