[tool.poetry]
name = "alts-modules"
version = "0.6.0"
description = "Some common modules for the ALTS"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "alts/modules", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
#alts-core = { path = "/home/bela/Cloud/code/Git/alts-core", develop = true }
alts-core = {git = "https://github.com/bela127/alts-core.git", branch = "dev"}
nptyping = ">=2.0.0a1"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
paramz = {git = "https://github.com/bela127/paramz.git@fix-numpy-types"}
GPy = {git = "https://github.com/SheffieldML/GPy.git", version = "1.13.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
